Use grid instead of flex to prevent last items going too big

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -6,6 +6,15 @@
 
 .reading-lists {
   margin: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+  grid-gap: 10px;
+  width: 100%;
+  justify-content: center;
+  padding: 5px;
+}
+
+.reading-lists > * {
 }
 
 .reading-list {
